--- a/Quarto Document.html
+++ b/Quarto Document.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Chante Hamilton">
 
-<title>College tuition on a geographic scale</title>
+<title>College tuition on a national scale</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -46,7 +46,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">College tuition on a geographic scale</h1>
+<h1 class="title">College tuition on a national scale</h1>
 </div>
 
 
@@ -77,23 +77,23 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div id="tbl-one" class="anchored">
 
-<div id="lmwxnceomh" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#lmwxnceomh table {
+<div id="kivapbcdqc" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#kivapbcdqc table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#lmwxnceomh thead, #lmwxnceomh tbody, #lmwxnceomh tfoot, #lmwxnceomh tr, #lmwxnceomh td, #lmwxnceomh th {
+#kivapbcdqc thead, #kivapbcdqc tbody, #kivapbcdqc tfoot, #kivapbcdqc tr, #kivapbcdqc td, #kivapbcdqc th {
   border-style: none;
 }
 
-#lmwxnceomh p {
+#kivapbcdqc p {
   margin: 0;
   padding: 0;
 }
 
-#lmwxnceomh .gt_table {
+#kivapbcdqc .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -119,12 +119,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_caption {
+#kivapbcdqc .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#lmwxnceomh .gt_title {
+#kivapbcdqc .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#lmwxnceomh .gt_subtitle {
+#kivapbcdqc .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -148,7 +148,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#lmwxnceomh .gt_heading {
+#kivapbcdqc .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -160,13 +160,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_bottom_border {
+#kivapbcdqc .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_col_headings {
+#kivapbcdqc .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -181,7 +181,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_col_heading {
+#kivapbcdqc .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -201,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#lmwxnceomh .gt_column_spanner_outer {
+#kivapbcdqc .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -213,15 +213,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#lmwxnceomh .gt_column_spanner_outer:first-child {
+#kivapbcdqc .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#lmwxnceomh .gt_column_spanner_outer:last-child {
+#kivapbcdqc .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#lmwxnceomh .gt_column_spanner {
+#kivapbcdqc .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -233,11 +233,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#lmwxnceomh .gt_spanner_row {
+#kivapbcdqc .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#lmwxnceomh .gt_group_heading {
+#kivapbcdqc .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -263,7 +263,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#lmwxnceomh .gt_empty_group_heading {
+#kivapbcdqc .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -278,15 +278,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#lmwxnceomh .gt_from_md > :first-child {
+#kivapbcdqc .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#lmwxnceomh .gt_from_md > :last-child {
+#kivapbcdqc .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#lmwxnceomh .gt_row {
+#kivapbcdqc .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -305,7 +305,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#lmwxnceomh .gt_stub {
+#kivapbcdqc .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -318,7 +318,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#lmwxnceomh .gt_stub_row_group {
+#kivapbcdqc .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -332,15 +332,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#lmwxnceomh .gt_row_group_first td {
+#kivapbcdqc .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#lmwxnceomh .gt_row_group_first th {
+#kivapbcdqc .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#lmwxnceomh .gt_summary_row {
+#kivapbcdqc .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -350,16 +350,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#lmwxnceomh .gt_first_summary_row {
+#kivapbcdqc .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_first_summary_row.thick {
+#kivapbcdqc .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#lmwxnceomh .gt_last_summary_row {
+#kivapbcdqc .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -369,7 +369,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_grand_summary_row {
+#kivapbcdqc .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#lmwxnceomh .gt_first_grand_summary_row {
+#kivapbcdqc .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -389,7 +389,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_last_grand_summary_row_top {
+#kivapbcdqc .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -399,11 +399,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_striped {
+#kivapbcdqc .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#lmwxnceomh .gt_table_body {
+#kivapbcdqc .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -412,7 +412,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_footnotes {
+#kivapbcdqc .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -426,7 +426,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_footnote {
+#kivapbcdqc .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -435,7 +435,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#lmwxnceomh .gt_sourcenotes {
+#kivapbcdqc .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -449,7 +449,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#lmwxnceomh .gt_sourcenote {
+#kivapbcdqc .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -457,63 +457,63 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#lmwxnceomh .gt_left {
+#kivapbcdqc .gt_left {
   text-align: left;
 }
 
-#lmwxnceomh .gt_center {
+#kivapbcdqc .gt_center {
   text-align: center;
 }
 
-#lmwxnceomh .gt_right {
+#kivapbcdqc .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#lmwxnceomh .gt_font_normal {
+#kivapbcdqc .gt_font_normal {
   font-weight: normal;
 }
 
-#lmwxnceomh .gt_font_bold {
+#kivapbcdqc .gt_font_bold {
   font-weight: bold;
 }
 
-#lmwxnceomh .gt_font_italic {
+#kivapbcdqc .gt_font_italic {
   font-style: italic;
 }
 
-#lmwxnceomh .gt_super {
+#kivapbcdqc .gt_super {
   font-size: 65%;
 }
 
-#lmwxnceomh .gt_footnote_marks {
+#kivapbcdqc .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#lmwxnceomh .gt_asterisk {
+#kivapbcdqc .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#lmwxnceomh .gt_indent_1 {
+#kivapbcdqc .gt_indent_1 {
   text-indent: 5px;
 }
 
-#lmwxnceomh .gt_indent_2 {
+#kivapbcdqc .gt_indent_2 {
   text-indent: 10px;
 }
 
-#lmwxnceomh .gt_indent_3 {
+#kivapbcdqc .gt_indent_3 {
   text-indent: 15px;
 }
 
-#lmwxnceomh .gt_indent_4 {
+#kivapbcdqc .gt_indent_4 {
   text-indent: 20px;
 }
 
-#lmwxnceomh .gt_indent_5 {
+#kivapbcdqc .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -843,23 +843,23 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div id="tbl-two" class="anchored">
 
-<div id="oijrfeklgu" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#oijrfeklgu table {
+<div id="skkompyybv" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#skkompyybv table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#oijrfeklgu thead, #oijrfeklgu tbody, #oijrfeklgu tfoot, #oijrfeklgu tr, #oijrfeklgu td, #oijrfeklgu th {
+#skkompyybv thead, #skkompyybv tbody, #skkompyybv tfoot, #skkompyybv tr, #skkompyybv td, #skkompyybv th {
   border-style: none;
 }
 
-#oijrfeklgu p {
+#skkompyybv p {
   margin: 0;
   padding: 0;
 }
 
-#oijrfeklgu .gt_table {
+#skkompyybv .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -885,12 +885,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_caption {
+#skkompyybv .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#oijrfeklgu .gt_title {
+#skkompyybv .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -902,7 +902,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#oijrfeklgu .gt_subtitle {
+#skkompyybv .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -914,7 +914,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#oijrfeklgu .gt_heading {
+#skkompyybv .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -926,13 +926,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_bottom_border {
+#skkompyybv .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_col_headings {
+#skkompyybv .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -947,7 +947,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_col_heading {
+#skkompyybv .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -967,7 +967,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#oijrfeklgu .gt_column_spanner_outer {
+#skkompyybv .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -979,15 +979,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#oijrfeklgu .gt_column_spanner_outer:first-child {
+#skkompyybv .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#oijrfeklgu .gt_column_spanner_outer:last-child {
+#skkompyybv .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#oijrfeklgu .gt_column_spanner {
+#skkompyybv .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -999,11 +999,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#oijrfeklgu .gt_spanner_row {
+#skkompyybv .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#oijrfeklgu .gt_group_heading {
+#skkompyybv .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1029,7 +1029,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#oijrfeklgu .gt_empty_group_heading {
+#skkompyybv .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1044,15 +1044,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#oijrfeklgu .gt_from_md > :first-child {
+#skkompyybv .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#oijrfeklgu .gt_from_md > :last-child {
+#skkompyybv .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#oijrfeklgu .gt_row {
+#skkompyybv .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1071,7 +1071,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#oijrfeklgu .gt_stub {
+#skkompyybv .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1084,7 +1084,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#oijrfeklgu .gt_stub_row_group {
+#skkompyybv .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1098,15 +1098,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#oijrfeklgu .gt_row_group_first td {
+#skkompyybv .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#oijrfeklgu .gt_row_group_first th {
+#skkompyybv .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#oijrfeklgu .gt_summary_row {
+#skkompyybv .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1116,16 +1116,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#oijrfeklgu .gt_first_summary_row {
+#skkompyybv .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_first_summary_row.thick {
+#skkompyybv .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#oijrfeklgu .gt_last_summary_row {
+#skkompyybv .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1135,7 +1135,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_grand_summary_row {
+#skkompyybv .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1145,7 +1145,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#oijrfeklgu .gt_first_grand_summary_row {
+#skkompyybv .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1155,7 +1155,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_last_grand_summary_row_top {
+#skkompyybv .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1165,11 +1165,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_striped {
+#skkompyybv .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#oijrfeklgu .gt_table_body {
+#skkompyybv .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1178,7 +1178,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_footnotes {
+#skkompyybv .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1192,7 +1192,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_footnote {
+#skkompyybv .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -1201,7 +1201,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#oijrfeklgu .gt_sourcenotes {
+#skkompyybv .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1215,7 +1215,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#oijrfeklgu .gt_sourcenote {
+#skkompyybv .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -1223,63 +1223,63 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#oijrfeklgu .gt_left {
+#skkompyybv .gt_left {
   text-align: left;
 }
 
-#oijrfeklgu .gt_center {
+#skkompyybv .gt_center {
   text-align: center;
 }
 
-#oijrfeklgu .gt_right {
+#skkompyybv .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#oijrfeklgu .gt_font_normal {
+#skkompyybv .gt_font_normal {
   font-weight: normal;
 }
 
-#oijrfeklgu .gt_font_bold {
+#skkompyybv .gt_font_bold {
   font-weight: bold;
 }
 
-#oijrfeklgu .gt_font_italic {
+#skkompyybv .gt_font_italic {
   font-style: italic;
 }
 
-#oijrfeklgu .gt_super {
+#skkompyybv .gt_super {
   font-size: 65%;
 }
 
-#oijrfeklgu .gt_footnote_marks {
+#skkompyybv .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#oijrfeklgu .gt_asterisk {
+#skkompyybv .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#oijrfeklgu .gt_indent_1 {
+#skkompyybv .gt_indent_1 {
   text-indent: 5px;
 }
 
-#oijrfeklgu .gt_indent_2 {
+#skkompyybv .gt_indent_2 {
   text-indent: 10px;
 }
 
-#oijrfeklgu .gt_indent_3 {
+#skkompyybv .gt_indent_3 {
   text-indent: 15px;
 }
 
-#oijrfeklgu .gt_indent_4 {
+#skkompyybv .gt_indent_4 {
   text-indent: 20px;
 }
 
-#oijrfeklgu .gt_indent_5 {
+#skkompyybv .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
